objects/Evaluation__c.object
<CustomObject><fields>
        <fullName>ACF_Anonymous__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Anonymous</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ACF_Answer_10_Comment__c</fullName>
        <label>Answer 10 Comment</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>ACF_Answer_10__c</fullName>
        <label>Answer 10</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>ACF_Answer_11_Comment__c</fullName>
        <label>Answer 11 Comment</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>ACF_Answer_11__c</fullName>
        <label>Answer 11</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>ACF_Answer_12_Comment__c</fullName>
        <label>Answer 12 Comment</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>ACF_Answer_12__c</fullName>
        <label>Answer 12</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>ACF_EE_Program_Offering__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>EE Program Offering</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Campaign.RecordTypeId</field>
                <operation>equals</operation>
                <value>BEE Program Offering</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Evaluations</relationshipLabel>
        <relationshipName>Evaluations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ACF_Eval_Template__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Eval Template</label>
        <referenceTo>Evaluation_Template__c</referenceTo>
        <relationshipLabel>Evaluations</relationshipLabel>
        <relationshipName>Evaluations</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ACF_Faculty_Presenter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Faculty / Presenter</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Evaluations (Faculty / Presenter)</relationshipLabel>
        <relationshipName>Evaluations1</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ACF_Pivotal_ID__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Used for migration from Pivotal</inlineHelpText>
        <label>Pivotal ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields><fields>
        <fullName>ACF_Program_Participant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Person who completed the evaluation/survey</inlineHelpText>
        <label>Program Participant</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Evaluations</relationshipLabel>
        <relationshipName>Evaluations</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ACF_Q10_Category__c</fullName>
        <label>Q10 Category</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>ACF_Q10__c</fullName>
        <label>Q10</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>ACF_Q11_Category__c</fullName>
        <label>Q11 Category</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>ACF_Q11__c</fullName>
        <label>Q11</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>ACF_Q12_Category__c</fullName>
        <label>Q12 Category</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>ACF_Q12__c</fullName>
        <label>Q12</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>ACF_Session__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Session</label>
        <referenceTo>Session__c</referenceTo>
        <relationshipLabel>Evaluations</relationshipLabel>
        <relationshipName>Evaluations</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ACF_View__c</fullName>
        <formula>HYPERLINK("/"+Id, "View")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View</label>
        <type>Text</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ReadWrite</externalSharingModel><label>Evaluation</label><nameField>
        <displayFormat>E-{000000000}</displayFormat>
        <label>Evaluation ID</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Evaluations</pluralLabel><sharingModel>ReadWrite</sharingModel><startsWith>Vowel</startsWith><listViews>
        <fullName>All</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>ACF_Program_Participant__c</columns>
        <columns>ACF_EE_Program_Offering__c</columns>
        <columns>ACF_Session__c</columns>
        <columns>ACF_Answer_1__c</columns>
        <columns>ACF_Answer_1_Comment__c</columns>
        <columns>ACF_Answer_2__c</columns>
        <columns>ACF_Answer_2_Comment__c</columns>
        <columns>ACF_Answer_3__c</columns>
        <columns>ACF_Answer_3_Comment__c</columns>
        <columns>ACF_Answer_4__c</columns>
        <columns>ACF_Answer_4_Comment__c</columns>
        <columns>ACF_Answer_5__c</columns>
        <columns>ACF_Answer_5_Comment__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews></CustomObject>